# trackingOpenCl

./: CMakeLists.txt  README.md  main.cpp
include/ITSReconstruction/CA/: Definitions.h  Event.h  PrimaryVertexContext.h
include/ITSReconstruction/CA/gpu/: Context.h  PrimaryVertexContext.h  Stream.h  UniquePointer.h  Utils.h  Vector.h
src/: CMakeLists.txt
src/CA/: PrimaryVertexContext.cxx  Tracker.cxx
src/CA/opencl/: Context.cpp  PrimaryVertexContext.cpp  Stream.cpp  Tracker.cpp  Utils.cpp
src/CA/opencl/kernel/: fillIndexTables.cl
